文件分类调整

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -27,9 +27,7 @@
 	
 	
 	
-	
-	
-  <display-name></display-name>	
+  <display-name>TaxPlatform</display-name>	
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
