--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -5,6 +5,16 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	
+	<!-- 权限过滤器(*注意：此过滤器必须先放到struts2过滤器之前) -->
+	<filter>
+	 	<filter-name>loginFilter</filter-name>
+	 	<filter-class>com.company.core.filter.LoginFilter</filter-class>
+	 </filter>
+	 <filter-mapping>
+	 	<filter-name>loginFilter</filter-name>
+	 	<url-pattern>*.action</url-pattern>
+	 </filter-mapping>
+	
 	<!-- struts2过滤器 -->
 	<filter>
         <filter-name>struts2</filter-name>    
@@ -23,9 +33,6 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
-	
-	
-	
 	
   <display-name>TaxPlatform</display-name>	
   <welcome-file-list>
