--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -6,14 +6,18 @@
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 	
 	<!-- 首页投诉详情懒加载异常 -->
-	<filter>
+	<!-- <filter>
 		<filter-name>openSessionInViewFilter</filter-name>
 		<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
+		<init-param>   
+           <param-name>flushMode</param-name>   
+           <param-value>AUTO</param-value>   
+       </init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>openSessionInViewFilter</filter-name>
 		<url-pattern>*.action</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
 	
 	<!-- 权限过滤器(*注意：此过滤器必须先放到struts2过滤器之前) -->
 	<filter>
